--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,7 @@
   --basic-black-grey: #161D29;
   --basic-black-dark: #000000;
   --basic-dark-white: #29344A;
+  --basic-dark-light: #E5E5E5;
   --basic-white-matt: #EAEAEA;
   --basic-red: #EE3643;
   --basic-blue: #3BBCE3;
@@ -95,7 +96,7 @@ body {
   min-height: 42px;
   align-items: center;
   background-color: var(--basic-ferrara-blue);
- 
+
 }
 
 .main-menu-logo {
@@ -103,7 +104,7 @@ body {
   padding: 13px 57px 4px 56px;
   background-color: var(--basic-red);
   margin-right: 0px;
-  box-shadow:  0 5px 0 0 #BB3A43;
+  box-shadow: 0 5px 0 0 #BB3A43;
 }
 
 .main-menu-logo:active {
@@ -215,7 +216,7 @@ body {
   padding: 0px;
 }
 
-.main-menu-items a{
+.main-menu-items a {
   display: flex;
   align-items: center;
 }
@@ -242,7 +243,7 @@ body {
   fill: var(--basic-dark-matt);
 }
 
-.main-menu-items li:nth-child(1):active svg{
+.main-menu-items li:nth-child(1):active svg {
   fill: var(--basic-red);
 }
 
@@ -283,7 +284,7 @@ body {
 
 .item-search a {
   padding-right: 20px;
- 
+
 }
 
 .item-search {
@@ -300,7 +301,7 @@ body {
   top: -1px;
 }
 
-.item-cart svg{
+.item-cart svg {
   position: relative;
   left: -6px;
   top: -1px;
@@ -438,7 +439,7 @@ body {
   background-color: var(--basic-ferrara-dark);
   margin: 0px;
   padding: 0px 25px 0px 25px;
-  box-shadow:  0 5px 0 0 var(--basic-ferrara-blue);
+  box-shadow: 0 5px 0 0 var(--basic-ferrara-blue);
 }
 
 .site-navigation li {
@@ -509,7 +510,7 @@ body {
   padding-left: 23px;
   padding-right: 31px;
   color: var(--basic-white);
-   overflow: hidden;
+  overflow: hidden;
 }
 
 .feature-item-block-new {
@@ -575,8 +576,8 @@ body {
   flex-direction: column;
 }
 
-.feature-item-new svg{
- margin-right: 10px;
+.feature-item-new svg {
+  margin-right: 10px;
 }
 
 /* slider */
@@ -732,7 +733,7 @@ body {
 }
 
 .firms-item img:active {
- opacity: 0.7;
+  opacity: 0.7;
 }
 
 .firms-items-wrapper {
@@ -788,7 +789,7 @@ body {
 .services-wrapper {
   background-color: var(--basic-background);
   height: 522px;
-  
+
 }
 
 .services-form-wrapper {
@@ -796,7 +797,7 @@ body {
   justify-content: start;
 }
 
-.services-form  {
+.services-form {
   display: flex;
   flex-direction: column;
   text-decoration: none;
@@ -811,14 +812,14 @@ body {
   margin-top: 0px;
 }
 
-.service-block h3{
+.service-block h3 {
   margin-top: 0px;
   font-style: normal;
-font-weight: normal;
+  font-weight: normal;
 }
 
 
-.service-block-delivery div{
+.service-block-delivery div {
   position: relative;
   margin-left: 80px;
 }
@@ -927,22 +928,22 @@ font-weight: normal;
   margin-top: 45px;
 }
 
-.company-contacts p{
+.company-contacts p {
   font-family: PT Sans, Arial, sans-serif;
   margin-bottom: 32px;
 }
 
-.company-contacts h2{
+.company-contacts h2 {
   font-weight: normal;
 }
 
-.company-plus p{
+.company-plus p {
   font-weight: normal;
   font-family: PT Sans, Arial, sans-serif;
   margin: 0px;
 }
 
-.company-plus div{
+.company-plus div {
   display: flex;
   flex-direction: column;
   width: 460px;
@@ -1061,7 +1062,7 @@ font-weight: normal;
   margin-top: 41px;
 }
 
-.footer-contacts p { 
+.footer-contacts p {
   color: var(--basic-white);
 }
 
@@ -1111,8 +1112,8 @@ font-weight: normal;
 
 .footer-bottom-title {
   color: var(--basic-white);
-font-size: 16px;
-line-height: 18px;
+  font-size: 16px;
+  line-height: 18px;
 }
 
 .footer-bottom a {
@@ -1131,22 +1132,79 @@ line-height: 18px;
 /* catalog */
 
 
+/* Pagination */
+
 .pagination-list {
+  display: flex;
+  flex-wrap: wrap;
+  padding: 0;
+  margin: -13px 0px 58px 240px;
   list-style: none;
+  
+}
+
+.pagination-item {
+  margin-right: 10px;
 }
 
 .pagination-item a {
+  display: block;
+  padding: 9px 15px;
   text-decoration: none;
   color: var(--basic-black-dark);
-  ;
-  background-color: var(--basic-white);
+  border: 1px solid var(--basic-dark-light);
+  border-radius: 2px;
+  font-size: 13px;
+  line-height: 18px;
+  font-family: "PT Sans";
 }
+
+.next-button {
+  text-align: center;
+  width: 140px;
+  font-family: PT Sans;
+font-size: 13px;
+line-height: 18px;
+text-transform: uppercase;
+}
+
+.pagination-item-current a {
+  border: none;
+  background-color: var(--basic-red);
+}
+
 
 .pagination-item a:hover,
 .pagination-item a:focus,
 .pagination-item a:active {
   background-color: var(--basic-red);
   color: var(--basic-white);
+}
+
+.perforator-description {
+  background-color: var( --basic-background);
+  padding-top: 64px;
+  padding-bottom: 67px;
+}
+
+.perforator-description h2,
+.perforator-description p {
+  margin: 0px;
+}
+
+.perforator-description p {
+  font-family: PT Sans;
+font-style: normal;
+font-size: 13px;
+line-height: 24px;
+}
+
+.perforator-description h2 {
+  font-family: Cuprum;
+  font-style: normal;
+  font-size: 30px;
+  line-height: 30px;
+  margin-bottom: 25px;
 }
 
 .pagination-item-current a,
@@ -1168,10 +1226,10 @@ line-height: 18px;
   position: relative;
   margin-right: 41px;
   font-family: PT Sans;
-font-style: normal;
-font-weight: normal;
-font-size: 13px;
-line-height: 18px;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 13px;
+  line-height: 18px;
 }
 
 .nav-items img {
@@ -1216,27 +1274,27 @@ line-height: 18px;
   order: -1;
 }
 
-.catalog-sort-items span{
+.catalog-sort-items span {
   margin-right: 140px;
 }
 
 .catalog-sort-form-label {
   color: var(--special-blue-light);
-  border-bottom: 2px dotted var(--basic-red); 
+  border-bottom: 2px dotted var(--basic-red);
 }
 
 .catalog-sort-form-label:hover {
   color: var(--basic-black-dark);
-  border-bottom: 2px solid var(--basic-red); 
+  border-bottom: 2px solid var(--basic-red);
 }
 
 
-.catalog-sort-form-label:nth-child(2){
+.catalog-sort-form-label:nth-child(2) {
   margin-right: 68px;
 }
 
 
-.catalog-sort-form-label:nth-child(4){
+.catalog-sort-form-label:nth-child(4) {
   margin-right: 62px;
 }
 
@@ -1245,7 +1303,7 @@ line-height: 18px;
 }
 
 .catalog-sort-form input:checked+label {
-  color: var(--basic-red); 
+  color: var(--basic-red);
   border-bottom: none;
 }
 
@@ -1268,10 +1326,10 @@ line-height: 18px;
   top: 10px;
   left: 5px;
   width: 0;
-	height: 0;
-	border-left: 6px solid transparent;
-	border-right: 6px solid transparent;
-	border-bottom: 11px solid red;
+  height: 0;
+  border-left: 6px solid transparent;
+  border-right: 6px solid transparent;
+  border-bottom: 11px solid red;
 }
 
 .button-down {
@@ -1284,10 +1342,10 @@ line-height: 18px;
   top: 10px;
   left: 5px;
   width: 0;
-	height: 0;
-	border-left: 6px solid transparent;
-	border-right: 6px solid transparent;
-	border-top: 11px solid red;
+  height: 0;
+  border-left: 6px solid transparent;
+  border-right: 6px solid transparent;
+  border-top: 11px solid red;
 }
 
 .catalog-container {
@@ -1299,8 +1357,192 @@ line-height: 18px;
 }
 
 .filter {
-  background-color: brown;
-  min-height: 640px;
+  margin: 0;
+}
+
+fieldset {
+  margin: 0;
+  padding: 0;
+  border: none;
+}
+
+fieldset legend {
+  font-family: PT Sans;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 17px;
+  line-height: 30px;
+  text-transform: uppercase;
+  padding: 0px;
+}
+
+.range-filter {
+  position: relative;
+  width: 220px;
+  margin-top: 10px;
+}
+
+.range-controls {
+  position: relative;
+  height: 40px;
+  margin-bottom: 6px;
+  padding-top: 39px;
+  padding-right: 20px;
+  padding-left: 20px;
+  background-color: var(--basic-gold-light);
+  border-radius: 5px;
+}
+
+.product-filter {
+  position: relative;
+  margin-bottom: 15px;
+}
+
+.product-filter-checkbox {
+  margin-bottom: 25px;
+}
+
+.filter-option label {
+  position: relative;
+  display: block;
+  cursor: pointer;
+  user-select: none;
+}
+
+.filter-input-checkbox+label::before {
+  content: "";
+  position: absolute;
+  left: -35px;
+  top: -3px;
+  width: 23px;
+  height: 23px;
+  background-repeat: no-repeat;
+  background-position: 0 0;
+  background-image: url("../img/checkbox-off.svg");
+}
+
+.filter-input-checkbox:checked+label::after {
+  content: "";
+  position: absolute;
+  left: -35px;
+  top: -3px;
+  width: 27px;
+  height: 23px;
+  background-repeat: no-repeat;
+  background-position: 0 0;
+  background-image: url("../img/checkbox-on.svg");
+}
+
+
+.filter-option {
+  margin-bottom: 20px;
+  padding-left: 35px;
+  font-family: PT Sans;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 15px;
+  line-height: 19px;
+}
+
+
+.product-filter-radio .product-filter {
+  margin-bottom: 26px;
+}
+
+.product-filter-radio {
+  margin-bottom: 17px;
+}
+
+.filter-input-radio+label::before {
+  content: "";
+  position: absolute;
+  left: -35px;
+  top: -5px;
+  width: 25px;
+  height: 25px;
+  background-repeat: no-repeat;
+  background-position: 0 0;
+  background-image: url("../img/radio-off.svg");
+}
+
+.filter-input-radio:checked+label::after {
+  content: "";
+  position: absolute;
+  left: -35px;
+  top: -5px;
+  width: 26px;
+  height: 26px;
+  background-repeat: no-repeat;
+  background-position: 0 0;
+  background-image: url("../img/radio-on.svg");
+}
+
+.filter-button {
+  border: 1px solid ver(--basic-dark-light);
+  background-color: var(--basic-white);
+  color: var(--basic-black-dark);
+  font-family: PT Sans;
+  font-size: 13px;
+  line-height: 18px;
+  width: 220px;
+}
+
+.range-controls .scale {
+  height: 2px;
+  background: #d7dcde;
+}
+
+.range-controls .bar {
+  width: 70%;
+  height: 2px;
+  background: #00ca74;
+}
+
+.range-controls .toggle {
+  position: absolute;
+  top: 31px;
+  left: 0;
+  width: 4px;
+  height: 4px;
+  padding: 0;
+  border: 8px solid #ffffff;
+  background-color: #ababab;
+  border-radius: 50%;
+  box-shadow: 0 2px 1px 0 #cfcfcf;
+  cursor: pointer;
+}
+
+.range-controls .toggle-min {
+  left: 18px;
+}
+
+.range-controls .toggle-max {
+  left: 160px;
+}
+
+.price-controls {
+  display: flex;
+  justify-content: space-between;
+}
+
+.price-controls label {
+  text-transform: uppercase;
+  font-family: "Roboto", "Arial", sans-serif;
+  font-size: 16px;
+}
+
+
+.price-controls input {
+  width: 94px;
+  margin-left: 0px;
+  padding: 10px 0px;
+  text-align: center;
+  color: #283136;
+  border: none;
+  border-radius: 2px;
+  background-color: var(--basic-gold-light);
+  font-family: inherit;
+  font-size: inherit;
 }
 
 .filter-title {
@@ -1315,7 +1557,32 @@ line-height: 18px;
   background-color: var(--basic-gold-light);
 }
 
-.products-item-catalog:nth-child(3n){
+.filter-item {
+  margin-bottom: 45px;
+}
+
+.range-filter::after {
+  content: "";
+  position: absolute;
+  left: 0px;
+  top: 149px;
+  width: 220px;
+  height: 1px;
+  background-color: #d7dcde;
+}
+
+
+.product-filter::after {
+  content: "";
+  position: absolute;
+  left: 0px;
+  top: -18px;
+  width: 220px;
+  height: 1px;
+  background-color: #d7dcde;
+}
+
+.products-item-catalog:nth-child(3n) {
   margin-right: 0px;
 }
 
@@ -1333,7 +1600,7 @@ line-height: 18px;
   margin-top: 18px;
 }
 
-.footer-social ul{
+.footer-social ul {
   display: flex;
 }
 
