--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,7 @@
   --basic-dark-gradient: linear-gradient(0deg, #212A3A, #212A3A);
   --basic-green: #63A63E;
   --basic-green-bright: #5FBB2D;
+  --basic-white-bright: #F4F4F4;
   --basic-green-dark: #518534;
   --basic-dark-bright: #C1C6CE;
   --basic-black-grey: #161D29;
@@ -78,6 +79,10 @@ body {
   width: 940px;
   margin: 0 auto;
   padding-bottom: 10px;
+}
+
+.button {
+  border: none;
 }
 
 /* Main menu */
@@ -1781,4 +1786,162 @@ fieldset legend {
   position: relative;
   top: -23px;
   padding: 26px 41px 16px 41px;
+}
+
+
+/* Modal login */
+
+.modal-login {
+  display: none;
+  flex-direction: column;
+  top: 120px;
+  bottom: auto;
+  background-color: var(--basic-white);
+  border-top: 7px solid var(--basic-red);
+  font-family: Cuprum;
+  font-size: 18px;
+  line-height: 24px;
+  border: none;
+  width: 620px;
+  height: 430px;
+}
+
+
+.modal-name-wrap {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 21px;
+}
+
+.modal-description {
+  margin-bottom: 11px;
+}
+
+.modal {
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  margin: auto;
+  border-top: 7px solid var(--basic-red);
+  box-shadow: 0 30px 50px rgba(0, 0, 0, 0.7);
+}
+
+
+#name-form,
+#email-form,
+#textarea {
+  width: 220px;
+  height: 38px;
+  margin: 0px;
+  padding: 0px;
+  border: 2px solid #C5C5C5;
+  box-sizing: border-box;
+  border-radius: 2px;
+}
+
+#textarea {
+  width: 460px;
+  height: 114px;
+}
+
+
+/* Modal close */
+
+.modal-close {
+  position: absolute;
+  top: 0;
+  right: -34px;
+  width: 22px;
+  height: 22px;
+  background-color: transparent;
+  border: 0;
+  cursor: pointer;
+}
+
+.modal-close::before,
+.modal-close::after {
+  content: "";
+  position: absolute;
+  top: 20px;
+  left: -50px;
+  width: 21px;
+  height: 4px;
+  background-color: var(--basic-red);
+}
+
+.modal-close::before {
+  transform: rotate(45deg);
+}
+
+.modal-close::after {
+  transform: rotate(-45deg);
+}
+
+.button-wrapper {
+  display: flex;
+  width: auto;
+  height: 136px;
+  background-color: var(--basic-white-bright);
+  justify-content: center;
+  align-items: center;
+}
+
+.button-wrapper .button{
+  width: 460px;
+  height: 38px;
+  border: none;
+}
+
+.modal-wrap {
+  margin: 21px 80px 0px 80px;
+}
+
+/* Modal map */
+
+.modal-map {
+  display: none;
+  width: 943px;
+  height: 449px;
+  border-top: 7px solid var(--basic-red);
+  background-color: var(--basic-white-bright);
+  z-index: 2;
+}
+
+.modal-map iframe {
+  border: none;
+}
+
+.modal-show {
+  display: block;
+  animation: bounce 0.6s;
+}
+
+.modal-error {
+  animation: shake 0.6s;
+}
+
+
+/* Animations */
+@keyframes shake {
+  0%,
+  100% {
+    transform: translateX(0);
+  }
+
+  10%,
+  30%,
+  50%,
+  70%,
+  90% {
+    transform: translateX(-10px);
+  }
+
+  20%,
+  40%,
+  60%,
+  80% {
+    transform: translateX(10px);
+  }
 }
