--- a/css/style.css
+++ b/css/style.css
@@ -200,6 +200,7 @@ body {
   justify-content: space-between;
   align-items: flex-start;
   padding-top: 45px;
+  margin-bottom: 40px;
   background-color: var(--basic-white-grey);
   padding-bottom: 0px;
 }
@@ -235,7 +236,7 @@ body {
 
 .main-menu-items li {
   display: flex;
-  padding: 6px 0px;
+  padding: 0px;
   margin: 0px;
   margin-top: 2px;
   min-width: 150px;
@@ -255,13 +256,10 @@ body {
   fill: var(--basic-dark-matt);
 }
 
-.main-menu-items li:nth-child(1):active svg {
-  fill: var(--basic-red);
-}
-
-.main-menu-items li:nth-child(1):active {
+.search-field:active {
   background-color: var(--basic-white)
 }
+
 
 
 .visually-hidden {
@@ -294,24 +292,10 @@ body {
   top: -1px;
 }
 
-.item-search a {
-  padding-right: 20px;
-  color: white;
-}
-
-
-.item-search {
-  display: flex;
-  justify-content: start;
-  margin: 0px;
-  padding: 0px;
-  width: 270px;
-}
-
 .item-search svg {
-  position: relative;
-  left: -180px;
-  top: -1px;
+  position: absolute;
+  left: -255px;
+  top: 12px;
 }
 
 .item-cart svg {
@@ -327,6 +311,20 @@ body {
   border-color: var(--basic-white);
 }
 
+
+.btn-search{
+  position: absolute;
+  background: none;
+  border: none;
+  font-size: 0px;
+  width: 0px;
+  height: 0px;
+  cursor: pointer;
+}
+
+.search-field:focus + .btn-search svg {
+  fill: red;
+}
 
 .main-menu-items input {
   background-color: var(--basic-ferrara-blue);
@@ -348,6 +346,12 @@ body {
   border: none;
 }
 
+.search-field {
+  width: 271px;
+  height: 40px;
+  padding-left: 40px;
+}
+
 .search-field::placeholder {
   color: var(--basic-white);
 }
@@ -358,6 +362,14 @@ body {
 
 .menu-button:active {
   background-color: var(--basic-green);
+}
+
+.item-search {
+  display: flex;
+  justify-content: start;
+  margin: 0px;
+  padding: 0px;
+  width: 270px;
 }
 
 /* Main-info */
@@ -381,7 +393,6 @@ body {
 
 .main-info-container {
   margin-left: 20px;
-  margin-bottom: 40px;
 }
 
 .main-contacts a {
@@ -462,6 +473,7 @@ body {
   margin: 0px;
   padding: 0px 25px 0px 25px;
   box-shadow: 0 5px 0 0 var(--basic-ferrara-blue);
+  flex-wrap: wrap;
 }
 
 .site-navigation li {
@@ -589,6 +601,7 @@ body {
   justify-content: center;
   width: 135px;
   height: 38px;
+  cursor: pointer;
 }
 
 .feature-item-block {
@@ -693,6 +706,7 @@ body {
   width: 192px;
   font-size: 14px;
   min-height: 38px;
+  cursor: pointer;
 }
 
 /* products */
@@ -858,6 +872,7 @@ body {
   font-family: Cuprum;
   font-size: 14px;
   line-height: 18px;
+  cursor: pointer;
 }
 
 .product-inner:hover .btns-wrap {
@@ -877,6 +892,7 @@ body {
 .firms-item img {
   outline-offset: -1px;
   outline: 1px solid var(--basic-white-matt);
+  cursor: pointer;
 }
 
 .firms-item img:hover {
@@ -971,20 +987,20 @@ body {
   margin-top: 0px;
   font-style: normal;
   font-weight: normal;
+  margin-bottom: 25px;
 }
 
 
-.service-block-delivery div {
+.service-block div {
   position: relative;
   margin-left: 80px;
 }
 
-.service-block-delivery-img {
+.service-block-img{
   position: absolute;
-  left: 150px;
-  top: 20px;
-  width: 468px;
-  height: 261px;
+  left: 240px;
+  top: 0px;
+
 }
 
 .services-form label {
@@ -996,6 +1012,7 @@ body {
   min-height: 49px;
   padding-top: 13px;
   padding-left: 22px;
+  cursor: pointer;
 }
 
 .services-form label:hover {
@@ -1029,11 +1046,18 @@ body {
 }
 
 .services {
+  position: relative;
   background-color: var(--basic-background);
-  background-image: url("../img/line.png");
   background-position: 235px 180px;
-  background-repeat: no-repeat;
-  z-index: 1;
+}
+
+.services-form-line{
+  position: absolute;
+  z-index: 3;
+  top: 130px;
+  left: 230px;
+  height: 279px;
+  width: 10px;
 }
 
 .services-title h2 {
@@ -1446,6 +1470,7 @@ body {
 .catalog-sort-form-label {
   color: var(--special-blue-light);
   border-bottom: 2px dotted var(--basic-red);
+  cursor: pointer;
 }
 
 .catalog-sort-form-label:hover {
@@ -1651,6 +1676,7 @@ fieldset legend {
   font-size: 13px;
   line-height: 18px;
   width: 220px;
+  border: 1px solid var(--basic-dark-light);
 }
 
 .range-controls .scale {
