--- a/css/style.css
+++ b/css/style.css
@@ -2,53 +2,54 @@
 
 :root {
   --basic-ferrara-blue: #293449;
-  --basic-ferrara-dark: #32425C;
+  --basic-ferrara-dark: #32425c;
   --basic-background-color: #888888;
   --basic-white: #ffffff;
-  --basic-white-grey: #F3F7F8;
+  --basic-white-grey: #f3f7f8;
   --basic-grey-white: rgba(255, 255, 255, 0.5);
   --basic-white-opacity: rgba(255, 255, 255, 0.3);
   --basic-grey-opacity: rgba(197, 197, 197, 0.3);
   --basic-dark-opacity: rgba(169, 169, 169, 0.3);
-  --basic-dark-gradient: linear-gradient(0deg, #212A3A, #212A3A);
-  --basic-green: #63A63E;
-  --basic-green-bright: #5FBB2D;
-  --basic-white-bright: #F4F4F4;
+  --basic-dark-gradient: linear-gradient(0deg, #212a3a, #212a3a);
+  --basic-green: #63a63e;
+  --basic-green-bright: #5fbb2d;
+  --basic-white-bright: #f4f4f4;
   --basic-green-dark: #518534;
-  --basic-dark-bright: #C1C6CE;
-  --basic-black-grey: #161D29;
+  --basic-dark-bright: #c1c6ce;
+  --basic-black-grey: #161d29;
   --basic-black-dark: #000000;
-  --basic-dark-white: #29344A;
-  --basic-dark-light: #E5E5E5;
-  --basic-white-matt: #EAEAEA;
-  --basic-red: #EE3643;
-  --basic-blue: #3BBCE3;
-  --basic-turquoise: #DC91D8;
-  --basic-khaki: #8ED78F;
-  --basic-gold: #FFC047;
-  --basic-gold-light: #F7F3EC;
-  --basic-white-dark: #F2F6F8;
-  --basic-red-dark: #CA2C37;
-  --basic-gold-dark: #FFDA96;
-  --basic-background: #F1F5F7;
-  --basic-grey: #3D546F;
-  --basic-greylight: #C5C5C5;
-  --basic-greylight-light: #32425C;
-  --basic-greylight-dark: #1D2739;
-  --special-ylellow: #FFBF47;
-  --special-blue: #3BBCE3;
-  --special-lilac: #DC91D8;
-  --special-greenlight: #8ED78F;
-  --special-blue-light: #B3B3B3;
-  --special-yellowligh: #FFD180;
-  --special-grey-dark: #F9F5F0;
-  --special-grey-opacity: #A9A9A9;
-  --special-grey-light: #63A63E;
+  --basic-dark-white: #29344a;
+  --basic-dark-light: #e5e5e5;
+  --basic-white-matt: #eaeaea;
+  --basic-red: #ee3643;
+  --basic-blue: #3bbce3;
+  --basic-turquoise: #dc91d8;
+  --basic-khaki: #8ed78f;
+  --basic-gold: #ffc047;
+  --basic-gold-light: #f7f3ec;
+  --basic-white-dark: #f2f6f8;
+  --basic-red-dark: #ca2c37;
+  --basic-gold-dark: #ffda96;
+  --basic-background: #f1f5f7;
+  --basic-grey: #3d546f;
+  --basic-greylight: #c5c5c5;
+  --basic-greylight-light: #32425c;
+  --basic-greylight-dark: #1d2739;
+  --special-ylellow: #ffbf47;
+  --special-blue: #3bbce3;
+  --special-lilac: #dc91d8;
+  --special-greenlight: #8ed78f;
+  --special-blue-light: #b3b3b3;
+  --special-yellowligh: #ffd180;
+  --special-grey-dark: #f9f5f0;
+  --special-grey-opacity: #a9a9a9;
+  --special-grey-light: #63a63e;
   --special-green-dark: #367316;
-  --success: #5FBB2D;
-  --warning: #FFBF47;
-  --error: #BA2732;
-  --grey: linear-gradient(180deg, #FFFFFF 0%, rgba(255, 255, 255, 0) 100%), #EAEAEA;
+  --success: #5fbb2d;
+  --warning: #ffbf47;
+  --error: #ba2732;
+  --grey: linear-gradient(180deg, #ffffff 0%, rgba(255, 255, 255, 0) 100%),
+    #eaeaea;
 }
 
 /* Global */
@@ -73,7 +74,6 @@ body {
 .page a {
   text-decoration: none;
 }
-
 
 .center {
   width: 940px;
@@ -100,7 +100,6 @@ body {
   min-height: 42px;
 }
 
-
 .main-menu {
   display: flex;
   min-height: 42px;
@@ -116,13 +115,12 @@ body {
   padding: 13px 57px 4px 56px;
   background-color: var(--basic-red);
   margin-right: 0px;
-  box-shadow: 0 5px 0 0 #BB3A43;
+  box-shadow: 0 5px 0 0 #bb3a43;
 }
 
 .main-menu-logo:active {
   background-color: var(--error);
 }
-
 
 .main-info-wrapper {
   display: flex;
@@ -131,15 +129,12 @@ body {
   background-color: var(--basic-white-grey);
 }
 
-
 .main-navigation-wrapper {
   display: flex;
   justify-content: center;
   background-color: var(--basic-white-grey);
   padding-bottom: 55px;
 }
-
-
 
 .main-header-logo {
   background-color: var(--basic-red);
@@ -150,7 +145,6 @@ body {
 .main-header-logo:active {
   background-color: var(--error);
 }
-
 
 .new-card {
   position: relative;
@@ -189,7 +183,6 @@ body {
 .site-navigation li:hover {
   background: var(--basic-greylight-dark);
 }
-
 
 .site-navigation li:active {
   background: var(--basic-greylight-dark);
@@ -259,9 +252,8 @@ body {
 }
 
 .search-field:active {
-  background-color: var(--basic-white)
+  background-color: var(--basic-white);
 }
-
 
 .visually-hidden {
   position: absolute;
@@ -305,15 +297,13 @@ body {
   top: -1px;
 }
 
-
 .item-search input:focus {
   background-color: var(--basic-white);
   color: var(--basic-grey-white);
   border-color: var(--basic-white);
 }
 
-
-.btn-search{
+.btn-search {
   position: absolute;
   background: none;
   border: none;
@@ -342,7 +332,7 @@ body {
   min-height: 42px;
 }
 
-.item-search input[type="search"] { 
+.item-search input[type="search"] {
   color: var(--basic-black-dark);
   border: none;
 }
@@ -388,9 +378,9 @@ body {
   color: var(--basic-red);
   font-size: 16px;
   line-height: 23px;
-  font-family: Cuprum;
-font-style: italic;
-font-weight: normal;
+  font-family: "Cuprum", "Arial", sans-serif;
+  font-style: italic;
+  font-weight: normal;
 }
 
 .main-contacts {
@@ -458,7 +448,6 @@ font-weight: normal;
   min-width: 150px;
 }
 
-
 .main-login-button:hover {
   color: var(--basic-red);
 }
@@ -474,7 +463,6 @@ font-weight: normal;
 .main-login-button:hover svg {
   fill: var(--basic-greylight);
 }
-
 
 /* Main-navigation */
 
@@ -495,10 +483,9 @@ font-weight: normal;
   padding: 17px 28px;
 }
 
-
 .main-login-wrapper .user-menu {
   font-size: 16px;
-  line-height: 18px
+  line-height: 18px;
 }
 
 .user-menu-wrapper {
@@ -508,15 +495,15 @@ font-weight: normal;
   padding: 0px 25px;
 }
 
-.user-menu:nth-child(2) {
+.user-menu-cabinet {
   position: relative;
 }
 
-.user-menu:nth-child(2)::before {
+.user-menu-cabinet::before {
   position: absolute;
-  content: '';
+  content: "";
   display: block;
-  width: 6px; 
+  width: 6px;
   height: 6px;
   background: var(--basic-ferrara-dark);
   border-radius: 50%;
@@ -604,7 +591,6 @@ font-weight: normal;
   overflow: hidden;
 }
 
-
 .feature-item-button:hover {
   background-color: var(--basic-grey-opacity);
 }
@@ -665,7 +651,6 @@ font-weight: normal;
   min-height: 266px;
 }
 
-
 .slider .button {
   margin-top: 97px;
   margin-left: 24px;
@@ -679,7 +664,6 @@ font-weight: normal;
   background: rgba(0, 0, 0, 0.25);
   color: var(--basic-white);
 }
-
 
 .slider-list h3 {
   font-size: 36px;
@@ -703,7 +687,7 @@ font-weight: normal;
 }
 
 .slider-button-back:before {
-  content: '';
+  content: "";
   display: block;
   position: absolute;
   top: 10px;
@@ -714,7 +698,7 @@ font-weight: normal;
   left: 30px;
   border-left: 1px;
   border-bottom: 1px;
-  cursor: pointer
+  cursor: pointer;
 }
 
 .slider-button-next {
@@ -722,7 +706,7 @@ font-weight: normal;
 }
 
 .slider-button-next:before {
-  content: '';
+  content: "";
   display: block;
   position: absolute;
   top: 10px;
@@ -733,10 +717,8 @@ font-weight: normal;
   left: -54px;
   border-left: 1px;
   border-bottom: 1px;
-  cursor: pointer
+  cursor: pointer;
 }
-
-
 
 .button {
   display: flex;
@@ -782,7 +764,6 @@ font-weight: normal;
   margin-top: -3px;
 }
 
-
 .products-items-wrapper {
   padding-top: 10px;
   background-color: var(--basic-white);
@@ -824,7 +805,6 @@ font-weight: normal;
   justify-content: space-between;
   align-items: center;
 }
-
 
 .price-wrap {
   display: flex;
@@ -911,7 +891,7 @@ font-weight: normal;
 .btns-wrap button {
   width: 135px;
   height: 38px;
-  font-family: Cuprum;
+  font-family: "Cuprum", "Arial", sans-serif;
   font-size: 14px;
   line-height: 18px;
   cursor: pointer;
@@ -984,8 +964,6 @@ font-weight: normal;
   transform: rotate(45deg);
 }
 
-
-
 .products-item p {
   color: var(--special-grey-opacity);
   font-size: 17px;
@@ -1002,7 +980,6 @@ font-weight: normal;
   padding-top: 40px;
   background-color: var(--basic-background);
   min-height: 480px;
-
 }
 
 .services-form-wrapper {
@@ -1032,17 +1009,21 @@ font-weight: normal;
   margin-bottom: 25px;
 }
 
-
 .service-block div {
   position: relative;
   margin-left: 80px;
 }
 
-.service-block-img{
+.service-block-img {
   position: absolute;
   left: 240px;
   top: 0px;
+}
 
+.service-block-img-bigtruck {
+  position: absolute;
+  left: 150px;
+  top: 20px;
 }
 
 .services-form label {
@@ -1061,7 +1042,7 @@ font-weight: normal;
   background-color: var(--basic-ferrara-blue);
 }
 
-.services-form input:checked+label {
+.services-form input:checked + label {
   background-color: var(--basic-white);
   color: var(--basic-greylight-light);
 }
@@ -1071,8 +1052,8 @@ font-weight: normal;
   font-size: 30px;
   line-height: 30px;
   text-transform: uppercase;
+  margin-bottom: 28px;
 }
-
 
 .services p {
   color: var(--basic-black-dark);
@@ -1093,7 +1074,7 @@ font-weight: normal;
   background-position: 235px 180px;
 }
 
-.services-form-line{
+.services-form-line {
   position: absolute;
   z-index: 3;
   top: 130px;
@@ -1123,7 +1104,7 @@ font-weight: normal;
   justify-content: space-between;
   color: var(--basic-black-dark);
   background-color: var(--basic-white);
-  padding-bottom: 70px;
+  padding-bottom: 71px;
 }
 
 .company-info div h2 {
@@ -1193,7 +1174,7 @@ font-weight: normal;
   display: flex;
   flex-direction: column;
   margin: 0px;
-  padding: 0px
+  padding: 0px;
 }
 
 .company-partners-item {
@@ -1218,7 +1199,6 @@ font-weight: normal;
 }
 
 .company-partners-items-button {
-
   width: 220px;
   height: 38px;
 }
@@ -1259,7 +1239,7 @@ font-weight: normal;
 .products-wrapper {
   display: flex;
   margin-top: 0px;
-  transform: translateX(22px)
+  transform: translateX(22px);
 }
 
 .footer-info {
@@ -1267,7 +1247,6 @@ font-weight: normal;
   justify-content: space-between;
   padding-bottom: 5px;
   background-color: var(--basic-greylight-light);
-
 }
 
 .page-footer li {
@@ -1326,9 +1305,8 @@ font-weight: normal;
 .footer-bottom-wrapper {
   display: flex;
   align-items: center;
-  padding-top: 5px;
+  padding-top: 8px;
   background-color: var(--basic-ferrara-blue);
-
 }
 
 .footer-bottom-title {
@@ -1352,7 +1330,6 @@ font-weight: normal;
 
 /* catalog */
 
-
 /* Pagination */
 
 .pagination-list {
@@ -1361,7 +1338,6 @@ font-weight: normal;
   padding: 0;
   margin: -27px 0px 58px 240px;
   list-style: none;
-
 }
 
 .pagination-item {
@@ -1394,7 +1370,6 @@ font-weight: normal;
   background-color: var(--basic-red);
 }
 
-
 .pagination-item a:hover,
 .pagination-item a:focus,
 .pagination-item a:active {
@@ -1405,7 +1380,7 @@ font-weight: normal;
 .perforator-description {
   background-color: var(--basic-background);
   padding-top: 64px;
-  padding-bottom: 60px;
+  padding-bottom: 57px;
 }
 
 .perforator-description h2,
@@ -1423,6 +1398,7 @@ font-weight: normal;
 .perforator-description h2 {
   font-family: "Cuprum", "Tahoma", sans-serif;
   font-style: normal;
+  font-weight: normal;
   font-size: 30px;
   line-height: 30px;
   margin-bottom: 25px;
@@ -1453,7 +1429,6 @@ font-weight: normal;
   line-height: 18px;
 }
 
-
 .catalog-nav-items {
   display: flex;
   margin-top: 21px;
@@ -1461,7 +1436,7 @@ font-weight: normal;
 }
 
 .nav-item-catalog::before {
-  content: '';
+  content: "";
   display: block;
   position: absolute;
   top: 10px;
@@ -1473,7 +1448,6 @@ font-weight: normal;
   border-left: 1px;
   border-bottom: 1px;
 }
-
 
 .container-title-wrapper {
   display: flex;
@@ -1520,11 +1494,9 @@ font-weight: normal;
   border-bottom: 2px solid var(--basic-red);
 }
 
-
 .catalog-sort-form-label:nth-child(2) {
   margin-right: 68px;
 }
-
 
 .catalog-sort-form-label:nth-child(4) {
   margin-right: 62px;
@@ -1534,7 +1506,7 @@ font-weight: normal;
   margin-right: 40px;
 }
 
-.catalog-sort-form input:checked+label {
+.catalog-sort-form input:checked + label {
   color: var(--basic-red);
   border-bottom: none;
 }
@@ -1642,7 +1614,7 @@ fieldset legend {
   user-select: none;
 }
 
-.filter-input-checkbox+label::before {
+.filter-input-checkbox + label::before {
   content: "";
   position: absolute;
   left: -35px;
@@ -1654,7 +1626,7 @@ fieldset legend {
   background-image: url("../img/checkbox-off.svg");
 }
 
-.filter-input-checkbox:checked+label::after {
+.filter-input-checkbox:checked + label::after {
   content: "";
   position: absolute;
   left: -35px;
@@ -1666,7 +1638,6 @@ fieldset legend {
   background-image: url("../img/checkbox-on.svg");
 }
 
-
 .filter-option {
   margin-bottom: 20px;
   padding-left: 35px;
@@ -1677,7 +1648,6 @@ fieldset legend {
   line-height: 19px;
 }
 
-
 .product-filter-radio .product-filter {
   margin-bottom: 26px;
 }
@@ -1686,7 +1656,7 @@ fieldset legend {
   margin-bottom: 17px;
 }
 
-.filter-input-radio+label::before {
+.filter-input-radio + label::before {
   content: "";
   position: absolute;
   left: -35px;
@@ -1698,7 +1668,7 @@ fieldset legend {
   background-image: url("../img/radio-off.svg");
 }
 
-.filter-input-radio:checked+label::after {
+.filter-input-radio:checked + label::after {
   content: "";
   position: absolute;
   left: -35px;
@@ -1765,7 +1735,6 @@ fieldset legend {
   font-size: 16px;
 }
 
-
 .price-controls input {
   width: 94px;
   margin-left: 0px;
@@ -1805,7 +1774,6 @@ fieldset legend {
   background-color: #d7dcde;
 }
 
-
 .product-filter::after {
   content: "";
   position: absolute;
@@ -1831,7 +1799,7 @@ fieldset legend {
 .footer-social {
   margin-left: 123px;
   align-self: flex-start;
-  margin-top: 10px;
+  margin-top: 8px;
 }
 
 .footer-social ul {
@@ -1856,7 +1824,6 @@ fieldset legend {
   padding: 26px 41px 16px 41px;
 }
 
-
 /* Modal login */
 
 .modal-login {
@@ -1866,14 +1833,13 @@ fieldset legend {
   bottom: auto;
   background-color: var(--basic-white);
   border-top: 7px solid var(--basic-red);
-  font-family: Cuprum;
+  font-family: "Cuprum", "Arial", sans-serif;
   font-size: 18px;
   line-height: 24px;
   border: none;
   width: 620px;
   height: 430px;
 }
-
 
 .modal-name-wrap {
   display: flex;
@@ -1897,7 +1863,6 @@ fieldset legend {
   z-index: 2;
 }
 
-
 #name-form,
 #email-form,
 #textarea {
@@ -1905,7 +1870,7 @@ fieldset legend {
   height: 38px;
   margin: 0px;
   padding: 0px;
-  border: 2px solid #C5C5C5;
+  border: 2px solid #c5c5c5;
   box-sizing: border-box;
   border-radius: 2px;
   color: var(--special-grey-opacity);
@@ -1916,7 +1881,6 @@ fieldset legend {
   width: 460px;
   height: 114px;
 }
-
 
 /* Modal close */
 
@@ -1929,7 +1893,6 @@ fieldset legend {
   background-color: transparent;
   border: 0;
   cursor: pointer;
-  
 }
 
 .modal-close::before,
@@ -1960,7 +1923,7 @@ fieldset legend {
   align-items: center;
 }
 
-.button-wrapper .button{
+.button-wrapper .button {
   width: 460px;
   height: 38px;
   border: none;
@@ -1993,7 +1956,6 @@ fieldset legend {
 .modal-error {
   animation: shake 0.6s;
 }
-
 
 /* Animations */
 @keyframes shake {
@@ -2030,7 +1992,7 @@ fieldset legend {
   height: 112px;
 }
 
-.button-wrapper-order .button{
+.button-wrapper-order .button {
   width: 192px;
   height: 38px;
 }
@@ -2041,7 +2003,6 @@ fieldset legend {
   color: var(--basic-black-dark);
 }
 
-
 .modal-order-wrap {
   display: flex;
   width: 620px;
@@ -2049,7 +2010,6 @@ fieldset legend {
   flex-direction: column;
   justify-content: end;
 }
-
 
 .modal-wrap-order {
   height: 170px;
@@ -2065,13 +2025,12 @@ fieldset legend {
 
 .modal-order-content p {
   font-weight: bold;
-font-size: 24px;
-line-height: 30px;
-text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  font-size: 24px;
+  line-height: 30px;
+  text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
-
-.modal-order{
+.modal-order {
   display: none;
 }
 
